# muckaway-mcp

./: .gitignore  LICENSE  PUBLISH.sh  README.md  pyproject.toml  retry-pypi.sh
.github/workflows/: ci.yml
src/muckaway_mcp/: __init__.py  server.py
tests/: test_server.py
