[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muckaway-mcp"
version = "0.1.0"
description = "MCP server for waste management, skip hire, grab lorry booking, and aquaculture water quality monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nicholas Templeman", email = "nicholas@meok.ai"}
]
keywords = [
    "mcp", "model-context-protocol", "waste-management", "skip-hire",
    "grab-lorry", "aquaculture", "water-quality", "defra", "ewc"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://muckaway.ai"
Documentation = "https://github.com/CSOAI-ORG/muckaway-mcp#readme"
Repository = "https://github.com/CSOAI-ORG/muckaway-mcp"
Issues = "https://github.com/CSOAI-ORG/muckaway-mcp/issues"

[project.scripts]
muckaway-mcp = "muckaway_mcp.server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src/muckaway_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
